webui/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: webui-rollout
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: webui-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: webui-rollout
    spec:
      containers:
      - name: webui-rollout
        image: dotronglong/faker:stable
        volumeMounts:
        - name: mocks-volume
          mountPath: /app/mocks
        ports:
        - name: http
          containerPort: 3030
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
      volumes:
      - name: mocks-volume
        configMap:
          name: user-mocks-configmap
  strategy:
#    canary:
#      # analysis will be performed in background, while rollout is progressing through its steps
#      analysis:
#        startingStep: 1   # index of step list, of when to start this analysis
#        templates:
#        - templateName: webui-success-rate
#        args:             # arguments allow AnalysisTemplates to be re-used
#        - name: service
#          value: webui-rollout
#        - name: namespace
#          valueFrom:
#            fieldRef:
#              fieldPath: metadata.namespace
    canary:
      maxSurge: 30%
      maxUnavailable: 0
      trafficRouting:
        istio:
          virtualService:
            name: webui-rollout
            routes:
            - primary
          destinationRule:
            name: webui-destrule    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
        - setCanaryScale:
            matchTrafficWeight: true
        - setWeight: 50
        - pause:
            duration: 1m
        - setWeight: 75
        - pause:
            duration: 1m

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: webui-experimental-rollout
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: webui-experimental-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true" # Keep Istio injection if needed
      labels:
        app: webui-experimental-rollout
    spec:
      containers:
        - name: webui-experimental-rollout
          # IMPORTANT: Update the image tag/version when you want to trigger an update
          image: dotronglong/faker:stable
          volumeMounts:
          - name: mocks-volume
            mountPath: /app/mocks
          ports:
            - name: http
              containerPort: 3030
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
      volumes:
      - name: mocks-volume
        configMap:
          name: user-mocks-configmap-experiment

  # Define a minimal canary strategy to satisfy Argo Rollouts requirement
  # This mimics a standard RollingUpdate behaviour
  strategy:
    canary:
      # Use maxSurge/maxUnavailable to control the rollout speed/safety
      # These behave like the fields in a standard Kubernetes Deployment strategy
      maxSurge: 30%       # How many extra pods can be created during an update
      maxUnavailable: 0   # How many pods can be unavailable during an update

      # --- DO NOT INCLUDE the following for a basic rolling update ---
      # steps: ...
      # trafficRouting: ...
      # analysis: ...
