webui/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-rollout
spec:
  gateways:
  - webui-rollout-gateway
  hosts:
  - "*"
  http:
  - name: primary
    route:
    - destination:
        host: webui-rollout
        port:
          number: 3030
        subset: stable  # referenced in canary.trafficRouting.webui.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: webui-rollout
        port:
          number: 3030
        subset: canary  # referenced in canary.trafficRouting.webui.destinationRule.canarySubsetName
      weight: 0

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-rollout-proxy
spec:
  hosts:
    - "webui-rollout-proxy"
  http:
  - name: primary
    route:
    - destination:
        host:  webui-rollout
        port:
          number: 3030
        subset: stable
      weight: 100
    - destination:
        host: webui-rollout
        port:
          number: 3030
        subset: canary
      weight: 0
